# KovanDiski

./: .gitignore  README.md
pride-forged/: .env.example  .env.local.example  .env.production.example  .gitignore  DEPLOY_VPS.md  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  send-telegram-outbox.sh
pride-forged/backend/: .env.example  .env.local.example  .env.production.example  Dockerfile  alembic.ini  pyproject.toml  start.sh
pride-forged/backend/alembic/: env.py
pride-forged/backend/alembic/versions/: 202606020001_initial_schema.py
pride-forged/backend/app/: main.py  seed.py
pride-forged/backend/app/api/: routes.py
pride-forged/backend/app/core/: config.py
pride-forged/backend/app/models/: __init__.py  brand.py  fitment.py  vehicle_model.py  wheel.py  wheel_image.py
pride-forged/backend/app/schemas/: __init__.py  catalog.py
pride-forged/backend/app/services/: email.py  telegram.py
pride-forged/docker/: README.md
pride-forged/docs/: API.md  deploy.md
pride-forged/frontend/: .env.local.example  .env.production.example  Dockerfile  package-lock.json  package.json  tailwind.config.ts
pride-forged/frontend/app/: globals.css  layout.tsx  page.tsx
pride-forged/frontend/components/: BrandLogo.tsx  Footer.tsx  Navbar.tsx  PageTransition.tsx  back-to-top-button.tsx  before-after-slider.tsx  brand-about-section.tsx  contact-method-picker.tsx  cookie-consent.tsx  (+14 more)
pride-forged/nginx/: default.conf  prod.conf
pride-forged/scripts/: send-email-outbox.sh  send-telegram-outbox.sh
pride-forged/telegram-outbox/: README.md
(+44 files in other folders)
