[project]
name = "pride-forged-backend"
version = "0.1.0"
description = "FastAPI backend for PRIDE Forged"
requires-python = ">=3.12"
dependencies = [
  "alembic==1.13.2",
  "fastapi==0.115.0",
  "pydantic==2.8.2",
  "pydantic-settings==2.4.0",
  "psycopg[binary]==3.2.1",
  "sqlalchemy==2.0.34",
  "python-multipart==0.0.12",
  "uvicorn[standard]==0.30.6"
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
pythonpath = ["."]
